# Confluence_LLM

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml  settings.json
.github/workflows/: ci.yml
src/confluence_llm/: Dockerfile  README.md  api.py  app.py  attachments.py  confluence_client.py  confluence_views.py  diagram_main_confluence_llm.md  diagram_stores.md  diagram_stores_option_bm25only.md  diagram_stores_option_faiss_in_memory_vectors.md  diagram_stores_option_hybrid_weighted_blend_normalized.md  diagram_stores_option_hyrbrid_late_fusion_rrf.md  diagram_stores_option_in_db_hybrid_postgres_fts_pgvector.md  diagram_stores_option_pgvectors_postgres.md  docker-compose.yml  ingest.py  makefile  observability.py  permissions.py  rag.py  repo_scaffold.ini  requirements.txt  response_generator.py  settings.py  store.py  store_pgvector.py  text_utils.py
