[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "confluence-llm"
version = "0.1.0"
description = "Confluence LLM utilities and app."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Tyler Miller" }]
license = { text = "MIT" }
dependencies = []
optional-dependencies.dev = [
  "pre-commit>=3.7.0",
  "ruff>=0.6.8",
  "black>=24.8.0",
  "mypy>=1.10.0",
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0",
  "bandit>=1.7.9",
  "pip-audit>=2.7.3",
  "types-requests",
  "types-PyYAML",
]
[project.scripts]
confluence-llm = "confluence_llm.app:main"

[tool.setuptools]
package-dir = { "" = "src" }
[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
lint.select = ["E","F","I","B","C4","UP","G","PERF","SIM","RUF"]
lint.ignore = []
[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["confluence_llm"]
force-sort-within-sections = true

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
show_error_codes = true
namespace_packages = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q --cov=confluence_llm --cov-report=term-missing"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["confluence_llm"]
[tool.coverage.report]
show_missing = true
skip_covered = true
